<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" >
    
    <TextView android:id="@+id/about_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text1" 
        android:layout_margin="2dp"/>
    
    <TextView android:id="@+id/about_text2"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text2" />
    
    <TextView android:id="@+id/about_text3"
        android:layout_margin="2dp"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text3" />
    
    <Button
        android:id="@+id/about_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_close_button"
         />
    
</LinearLayout>

