<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:easyloop="http://schemas.android.com/apk/res/de.egh.easyloop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <de.egh.easyloop.ui.component.SliderSlot
        android:id="@+id/inSliderSlot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        easyloop:sliderSlot_seekBarEnabled="true"
        easyloop:sliderSlot_title="@string/inSliderSlotTitle" />

    <de.egh.easyloop.ui.component.SliderSlot
        android:id="@+id/liveSliderSlot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        easyloop:sliderSlot_seekBarEnabled="true"
        easyloop:sliderSlot_title="@string/liveSliderSlotTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal" >

        <de.egh.easyloop.ui.component.SliderSlot
            android:id="@+id/tapeSliderSlot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            easyloop:sliderSlot_seekBarEnabled="true"
            easyloop:sliderSlot_title="@string/tapeSliderSlotTitle" />

        <ToggleButton
            android:id="@+id/tapeCountInToggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="50"
            android:background="@drawable/toggle_button"
            android:textOff="@string/countInToggleOff"
            android:textOn="@string/countInToggleOn" 
            android:hapticFeedbackEnabled="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="horizontal" >

        <de.egh.easyloop.ui.components.tapebutton.TapeButtonView
            android:id="@+id/play1Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@drawable/tape_button"
            easyloop:tapeButtonType="play" />

        <de.egh.easyloop.ui.components.tapebutton.TapeButtonView
            android:id="@+id/record1Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@drawable/tape_button"
            easyloop:tapeButtonType="record" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonStop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="@drawable/tape_button"
        android:text="@string/buttonStop" 
        android:hapticFeedbackEnabled="true"
        android:src="@drawable/stop_button"
        />

</LinearLayout>